[GTK] accessibility/loading-iframe-sends-notification.html is failing https://bugs.webkit.org/show_bug.cgi?id=98370

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-09-10
Reviewed by Chris Fleizach.

Source/WebCore:

Enabled AXLayoutComplete on the GTK platform.

No new tests are required because this feature will use an existing
accessibility layout test that is currently failing on the GTK+ platform
(e.g. loading-iframe-sends-notification.html).

* accessibility/atk/AXObjectCacheAtk.cpp:
(WebCore::AXObjectCache::postPlatformNotification): Send layout-complete
signal in case of AXLayoutComplete.
* dom/Document.cpp:
(WebCore::Document::implicitClose): Enabled AXLayoutComplete on the GTK
platform.
* page/FrameView.cpp:
(WebCore::FrameView::layout): Enabled AXLayoutComplete on the GTK
platform.

Tools:

Added AXLayoutComplete for the GTK platform.

* DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:
(axObjectEventListener): Added notification AXLayoutComplete for
layout-complete signal.

LayoutTests:

Changed the expectation of the loading iframe notification test in
accessibility, which was failing before this fix on the GTK+
platform.

* platform/gtk/TestExpectations: Changed the expectation of the loading
iframe notification test in accessibility.

Canonical link: https://commits.webkit.org/139020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155456 268f45cc-cd09-0410-ab3c-d52691b4dbfc